fixtures/parser/invalid/class_members_invalid.php
<?php
// invalid: class property is missing a statement terminator

class BrokenMembers {
    public string $name
